--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,56 @@
-.asshole-button {
-  margin-left: 4px;
+.asshole-button,
+.goodGuy-button {
   background: #000;
-  border: 1px solid #fff;
-  color: #f00;
+  border: 1px solid #ffffff44;
   cursor: pointer;
-  font-size: 12px;
-  height: 17px;
-  left: -55px;
-  line-height: 1rem;
-  outline: 3px solid #000;
+  font-size: 10px;
+  height: 15px;
+  line-height: 0.5rem;
+  margin-left: 0;
+  outline: 2px solid #000;
   padding: 0;
-  position: relative;
+  position: absolute;
+  transition: all .125s ease-in-out;
+  width: 15px;
+  z-index: 0;
+}
+
+.asshole-button {
+  color: #f00;
+  left: -8px;
   top: 0;
-  width: 17px;
-  z-index: 10;
+}
+
+.goodGuy-button {
+  bottom: 0;
+  color: #0f0;
+  left: -8px;
+}
+
+.asshole-button:hover,
+.asshole-button:focus,
+.goodGuy-button:hover,
+.goodGuy-button:focus {
+  background: #000;
+  border: 1px solid #ffffffff;
+  outline: 2px solid #000;
+}
+
+.asshole-button.animate,
+.goodGuy-button.animate {
+  animation: pop 0.3s ease;
+}
+
+faceplate-tracker {
+  position: relative;
+}
+
+shreddit-comment {
+  border: 2px solid transparent;
 }
 
 @keyframes pop {
   0% { transform: scale(1); opacity: 0.5; }
   50% { transform: scale(1.3); opacity: 1; }
   100% { transform: scale(1); }
-}
-
-.asshole-button.animate {
-  animation: pop 0.3s ease;
 }
